<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ping!</string>
    <string name="tagline">Discover &amp; share spontaneously!</string>
    
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    
    <string name="newPingTitle">New Ping</string>
    <string name="titleHint">Title</string>
    <string name="messageHint">Message</string>
    <string name="addressHint">Address (Optional)</string>
    <string name="submitPing">Ping it!</string>
    
    <string name="settingsTitle">Settings</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    
    <string name="connectionFailed">Couldn\'t connect to Ping</string>
    <string name="authenticationFailed">Log in failed</string>
    <string name="badRequest">Bad Request</string>
    <string name="notFound">Resource not found</string>
    <string name="forbidden">Not allowed to access this resource</string>
    <string name="unprocessable">Request failed</string>
    
    <string name="pictureAdded">Picture added!</string>
    <string name="pictureNotAdded">Couldn\'t add photo</string>
    <string name="loggedOut">You have been logged out</string>

    <string name="gplusLoadingMessage">Signing you in via Google+</string>
    <string name="fbLoadingMessage">Signing you in via Facebook</string>
    <string name="serverClientId">795269385456-7kjnqtdmovr7tsd9udnsfgmnclps4cur.apps.googleusercontent.com</string>

    <string name="app_id">1513182342246142</string>
</resources>