<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SemiTransBluePanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newPingTitle"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <View
        android:id="@+id/view3"
        android:layout_width="220dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />
    
    <TextView
		android:id="@+id/profile"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/profile"
		style="@style/MinimalTextButton" />
    
    <TextView
		android:id="@+id/logout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/logout"
		style="@style/MinimalTextButton" />

</LinearLayout>