<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SemiTransWhitePanel"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/newPingTitle"
	        android:layout_gravity="center"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

	    <EditText
	        android:id="@+id/title"
	        style="@style/MinimalEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="16dp"
	        android:ems="10"
	        android:hint="@string/titleHint" />

	    <View
	        android:id="@+id/view2"
	        android:layout_width="220dp"
	        android:layout_height="1dp"
	        android:layout_marginTop="10dp"
	        android:layout_gravity="center"
	        android:background="@android:color/darker_gray" />

	    <EditText
	        android:id="@+id/address"
	        style="@style/MinimalEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:ems="10"
	        android:hint="@string/addressHint" >
	    </EditText>

	    <ImageView
	        android:id="@+id/addedImage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="19dp"
	        android:src="@drawable/ic_launcher"
	        android:visibility="gone" />

	    <ImageButton
	        android:id="@+id/addImageButton"
	        style="@style/BlueBackgroundImageButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="18dp"
	        android:src="@drawable/image" />

	    <EditText
	        android:id="@+id/message"
	        style="@style/MinimalEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="23dp"
	        android:ems="10"
	        android:hint="@string/messageHint"
	        android:inputType="textMultiLine" />
   </LinearLayout>
   
    <Button
		android:id="@+id/submitPingButton"
		style="@style/FlatBlueButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:text="@string/submitPing" />
    
</RelativeLayout>